# Quantioa

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
docker/: gateway.Dockerfile  service.Dockerfile
frontend/: Dockerfile  package-lock.json  package.json  screenshot.py
frontend/app/: globals.css  layout.js  page.js  page.module.css
frontend/app/components/: SplineBackground.js
frontend/app/dashboard/: layout.js  layout.module.css  page.js  page.module.css
frontend/app/login/: layout.js  layout.module.css  page.js
frontend/app/register/: page.js
src/quantioa/: __init__.py  config.py
src/quantioa/broker/: __init__.py  base.py  factory.py  paper_adapter.py  token_store.py  types.py  upstox_adapter.py  upstox_auth.py  upstox_streamer.py  zerodha_adapter.py  zerodha_auth.py
src/quantioa/compliance/: __init__.py  algo_registry.py  kyc.py  (+6 more)
tests/: manual_zerodha_login.py  test_ai_agent.py  test_auth_service.py  test_compliance.py  test_config.py  test_db_models.py  test_engine.py  test_inc8_execution.py  test_increments.py  test_indicators.py  test_llm_workflows.py  test_models.py  test_paper_adapter.py  test_sentiment_analysis.py  test_sentiment_cache.py  test_sentiment_reader.py  test_sentiment_weights.py  test_signal_generator.py  test_strategy_integration.py  test_trading_engine_service.py  test_upstox_adapter.py  test_zerodha_adapter.py  test_zerodha_auth.py  test_zerodha_factory.py  trial_run.py
tests/data/: test_market_pipeline.py
tests/portfolio/: test_portfolio.py
(+58 files in other folders)
