[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantioa"
version = "0.1.0"
description = "AI-Powered Real-Time Trading System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Quantioa Team"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "PyJWT>=2.8",
    "bcrypt>=4.1",
    "email-validator>=2.0",
    "websockets>=12.0",
    "openai>=1.40.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.36",
    "langgraph>=0.2.74",
    "aiokafka>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quantioa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
